# advent-of-code

./: Cargo.toml  renovate.json5
.github/workflows/: test.yml
d2020/: Cargo.toml
d2020/src/: day04.rs  day14.rs  lib.rs  main.rs
d2021/: Cargo.toml
d2021/src/: day06.rs  day08.rs  day10.rs  day11.rs  day12.rs  day23.rs  lib.rs  main.rs
d2022/: Cargo.toml
d2022/src/: day02.rs  day03.rs  day05.rs  day07.rs  main.rs
d2023/: Cargo.toml
d2023/src/: day02.rs  main.rs
daoc/: Cargo.toml
daoc/src/: lib.rs  main.rs
daoc/src/d2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day10.rs
daoc/src/d2016/: day01.rs  day02.rs
daoc/src/d2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  mod.rs
daoc/src/d2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day07.rs
daoc/src/d2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day25.rs  mod.rs
daoc/src/d2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day14.rs  day23.rs  day24.rs  day25.rs
daoc/src/d2021/day12/: graph.rs
daoc/src/d2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day13.rs  mod.rs
daoc/src/d2022/day09/: move.rs
daoc/src/d2023/: day01.rs  day02.rs  day03.rs  mod.rs
daoc/src/d2024/: day01.rs
daocutil/src/: lib.rs
src/: lib.rs  main.rs  solver.rs  util.rs
src/archive/: mod.rs
src/archive/d2015/: day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day10.rs
src/archive/d2017/: day02.rs  day03.rs  day04.rs  mod.rs
src/archive/d2019/: day01.rs  intcode.rs  mod.rs
src/archive/d2020/: day02.rs  day03.rs  day04.rs  day05.rs  day07.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day18.rs  day19.rs  day20.rs  day21.rs
src/archive/d2020/day18/: tests.rs
src/archive/d2021/: day01.rs  day02.rs  day04.rs  day05.rs  day25.rs
src/archive/d2021/day11/: state.rs
src/archive/d2021/day12/: graph.rs
src/archive/d2022/: day02.rs  day03.rs  day05.rs  day07.rs  day08.rs  day10.rs  day11.rs  day13.rs  mod.rs
src/archive/d2022/day09/: move.rs
src/archive/d2023/: mod.rs
src/d2015/: day01.rs  day05.rs  mod.rs
src/d2016/: day02.rs  mod.rs
src/d2017/: day04.rs  day05.rs
src/d2018/: mod.rs
src/d2019/: day02.rs  day07.rs  intcode.rs  mod.rs
src/d2020/: day04.rs  day06.rs  day07.rs  day10.rs  day12.rs  day15.rs  day19.rs  day22.rs  lines.rs  mod.rs
src/d2020/day02/: tests.rs
src/d2021/: day07.rs  day08.rs  day09.rs  day12.rs  day23.rs  day24.rs  mod.rs
src/d2021/day04/: board.rs
src/d2022/: day01.rs  day02.rs  day03.rs  day07.rs  day13.rs
src/d2023/: day01.rs  day02.rs  day03.rs
src/d2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day19.rs  day25.rs  mod.rs
src/d2025/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  mod.rs
src/dtemplate/: day01.rs  mod.rs
src/util/: neighbors.rs
