[package]
name = "aoc"
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.93"
itertools = "0.14.0"
nu-ansi-term = "0.50.1"
regex = "1.11.1"
thiserror = "2.0.3"
md5 = "0.8.0"
rayon = "1.10.0"
num = "0.4.1"
num-integer = "0.1.46"
phf = { version = "0.13.0", features = ["macros"] }

[features]
default = [
    "y2015",
    "y2016",
    "y2017",
    "y2018",
    "y2019",
    "y2020",
    "y2021",
    "y2022",
    "y2023",
    "y2024",
    "y2025",
]
y2015 = []
y2016 = []
y2017 = []
y2018 = []
y2019 = []
y2020 = []
y2021 = []
y2022 = []
y2023 = []
y2024 = []
y2025 = []

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
missing_panics_doc = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
std_instead_of_core = "deny"
