[package]
name = "d2020"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
itertools.workspace = true
num.workspace = true
num-integer.workspace = true
regex.workspace = true
thiserror.workspace = true
daocutil.workspace = true

[dev-dependencies]
static_assertions = "1.1.0"
