[package]
name = "d2021"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
daocutil.workspace = true
itertools.workspace = true
md5.workspace = true
nu-ansi-term.workspace = true
rayon.workspace = true
regex.workspace = true
thiserror.workspace = true
