[package]
name = "daoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
daocutil.workspace = true
itertools.workspace = true
md5.workspace = true
nu-ansi-term.workspace = true
num.workspace = true
num-integer.workspace = true
phf.workspace = true
rayon.workspace = true
regex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
